--- a/Snake/index.html
+++ b/Snake/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Snake</title>
+    <title>Glass Dragon</title>
     <script src="app.js"></script>
     <script src="scripts/Vector.js"></script>
     <script src="scripts/Snake.js"></script>
